@@ -66,8 +66,9 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
         (2598,'main','security','cookie_life','7200','Maximum idle cookie time','text',0,'BN','size=5','Maximum number of <b>seconds</b> a user\'s session cookie can be idle. values less than 60 seconds will be ignored. A session that is logged in and idle for longer than this value will automatically be logged out.\r\n\r\n<b>Recommendation:</b> 1 hour (3600 seconds)'),
         (2601,'theme','permissions','show_admin','1','Show Admin Link?','boolean',0,'','','If enabled the \'Admin\' link at the top of the stats will be visible to all users. This does not prevent the admin URL from working it merely prevents the link from appearing in the users browser.\r\n\r\n<b>Note:</b> This option relies on the theme supporting this configuration setting. A theme can either choose to always show the link, use this setting, or never show the link. If you use third party themes then verify your settings are being applied properly. You may wish to contact the theme author if there are any problems.'),
         (2604,'theme','permissions','show_version','1','Show PsychoStats Version?','boolean',0,'','','Should the PsychoStats version in the footer of all pages be displayed?'),
+        (2605,'main',NULL,'base_url','','Base Stats URL','text',0,'','','The base URL of your stats. This needs to be a fully qualified URL (ie: you need http://)\r\n\r\nThis is not the same as your \"Home\" URL and should have been configured when you installed PsychoStats.'),
         (2606,'main',NULL,'site_name','','Site name','text',0,'','','The name of your website.This is not an URL.\r\n\r\nThis string is displayed in certain locations of the theme (such as the index page title, user registrations, etc).'),
-        (2607,'main',NULL,'site_url','','Site URL','text',0,'','','The URL of your main website. This can be any URL you want, but should be a fully qualified URL (ie: you need http://)\r\n\r\nIf this URL is configured it will appear as a \"Home\" link in the main menu of the stats page.'),
+        (2607,'main',NULL,'site_url','','\"Home\" URL','text',0,'','','The URL of the \"Home\" link in your overall header menu. This can be any URL you want, but should be a fully qualified URL (ie: you need http:// or https://)\r\n\r\nThis is not the same as your Base Stats URL.\r\n\r\nTypically this would be the URL of your main Scoresheet league page.'),
         (2608,'theme','permissions','show_team_icons','1','Show Team Icons?','boolean',0,'','','Should team icons (mini avatars) be shown in team listings?'),
         (2610,'theme','permissions','show_team_flags','1','Show Team Flags?','boolean',0,'','','Should team country flags be shown in team listings?'),
         (2616,'main','security','cookie_compress','0','GZIP Cookies?','boolean',0,'','','Should session option cookies be compressed? Simple GZIP compression is used on the cookie data to reduce the overall size.'),
