@@ -26,7 +26,10 @@ Version 0.0.4b (in progress)
 * [Fixed] More HTML errors.
 * [Removed] Remnants of XHTML code.
 * [Fixed] Errors associated with early season stats.
+* [Fixed] Unreliable link create for player roster stats.
 * [Fixed] Most recently used team name not being returned on certain pages.
+* [Changed] Base URL for stats to be used in email notifications is now set during install.
+* [Removed] Use of unreliable $_SERVER['HTTP_REFERER'] for email notifications links.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
